src/components/Footer.css
.footer {;
  max-width: 800px;
  margin: 0 auto;
  display: flex;
  justify-content: space-between;
  padding: 2rem 1rem;
  align-items: center;
}

.footer__social {
  margin: 0;
  padding: 0;
  list-style-type: none;
  display: flex;
  justify-content: center;
  align-items: center;
}

.footer__social--link {
  margin-right: 0.8rem;
  display: block;
  height: 38px;
  width: 38px;
  padding: 0.52em;
  background-color: var(--primary-color);
  border-radius: 50%;
  transition: background-color .3s;
}

.footer__social li:last-child .footer__social--link {
  margin-right: 0;
}

.footer__social svg {
  fill: var(--background-color);
}

.footer__social--link:hover {
  background-color: var(--primary-color-dark-1);
}

.footer__links {
  display: flex;
  justify-content: space-between;
}

.footer__links > a {
  text-decoration: none;
  color: var(--text-color-light-2);
  font-size: 0.85rem;
  margin-left: 1rem;
  transition: color .3s;
}

.footer__links > a:first-child {
  margin-left: 0;
}

.footer__links > a:hover {
  color: var(--text-color);
}

:root[data-theme=dark] .footer__links > a {
  color: var(--text-color);
}

:root[data-theme=dark] .footer__links > a:hover {
  color: var(--text-color-light-2);
}

@media (max-width: 640px) {
  .footer {
    flex-direction: column;
  }

  .footer__social {
    margin-bottom: 1.2rem;
  }
}

